--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>1 2 3</p>
+    <div>
+        <p>
+            1 2 3
+        </p>
+    </div>
+    
 </body>
 </html>
